--- a/clashN/clashN/Forms/ProxiesControl.resx
+++ b/clashN/clashN/Forms/ProxiesControl.resx
@@ -57,104 +57,43 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="&gt;&gt;splitContainer1.Type" xml:space="preserve">
-    <value>System.Windows.Forms.SplitContainer, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="splitContainer1.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
+    <value>Fill</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="splitContainer1.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 0</value>
   </data>
-  <data name="&gt;&gt;$this.Name" xml:space="preserve">
-    <value>ProxiesControl</value>
+  <metadata name="cmsProxies.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>18, 16</value>
+  </metadata>
+  <data name="cmsProxies.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
   </data>
-  <data name="&gt;&gt;splitContainer1.Name" xml:space="preserve">
-    <value>splitContainer1</value>
-  </data>
-  <data name="lvProxies.Size" type="System.Drawing.Size, System.Drawing">
-    <value>399, 502</value>
-  </data>
-  <data name="&gt;&gt;cmsProxies.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ContextMenuStrip, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;splitContainer1.Panel2.Name" xml:space="preserve">
-    <value>splitContainer1.Panel2</value>
-  </data>
-  <data name="&gt;&gt;splitContainer1.Panel1.ZOrder" xml:space="preserve">
-    <value>0</value>
-  </data>
-  <data name="&gt;&gt;lvProxies.Name" xml:space="preserve">
-    <value>lvProxies</value>
-  </data>
-  <data name="&gt;&gt;cmsProxies.Name" xml:space="preserve">
-    <value>cmsProxies</value>
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="splitContainer1.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
-    <value>Fill</value>
-  </data>
-  <data name="&gt;&gt;tsbProxiesSelectActivity.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="tsbProxiesSpeedtest.Text" xml:space="preserve">
-    <value>Delay test</value>
-  </data>
-  <data name="$this.Size" type="System.Drawing.Size, System.Drawing">
-    <value>830, 502</value>
-  </data>
-  <data name="&gt;&gt;splitContainer1.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;tsbProxiesReload.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;lvDetail.Parent" xml:space="preserve">
-    <value>splitContainer1.Panel2</value>
+  <data name="tsbProxiesReload.Size" type="System.Drawing.Size, System.Drawing">
+    <value>202, 22</value>
   </data>
   <data name="tsbProxiesReload.Text" xml:space="preserve">
     <value>Proxies reload</value>
   </data>
-  <data name="cmsProxies.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
   <data name="tsbProxiesSpeedtest.Size" type="System.Drawing.Size, System.Drawing">
-    <value>181, 22</value>
+    <value>202, 22</value>
   </data>
-  <data name="&gt;&gt;lvDetail.Type" xml:space="preserve">
-    <value>clashN.Base.ListViewFlickerFree, clashN, Culture=neutral, PublicKeyToken=null</value>
+  <data name="tsbProxiesSpeedtest.Text" xml:space="preserve">
+    <value>All Node Latency Test</value>
   </data>
-  <data name="&gt;&gt;tsbProxiesReload.Name" xml:space="preserve">
-    <value>tsbProxiesReload</value>
+  <data name="cmsProxies.Size" type="System.Drawing.Size, System.Drawing">
+    <value>203, 48</value>
   </data>
-  <data name="&gt;&gt;splitContainer1.Panel2.Type" xml:space="preserve">
-    <value>System.Windows.Forms.SplitterPanel, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="&gt;&gt;cmsProxies.Name" xml:space="preserve">
+    <value>cmsProxies</value>
   </data>
-  <data name="&gt;&gt;lvDetail.Name" xml:space="preserve">
-    <value>lvDetail</value>
-  </data>
-  <data name="&gt;&gt;tsbProxiesSelectActivity.Name" xml:space="preserve">
-    <value>tsbProxiesSelectActivity</value>
-  </data>
-  <data name="&gt;&gt;splitContainer1.Panel1.Parent" xml:space="preserve">
-    <value>splitContainer1</value>
+  <data name="&gt;&gt;cmsProxies.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ContextMenuStrip, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="lvProxies.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Fill</value>
-  </data>
-  <data name="&gt;&gt;lvDetail.ZOrder" xml:space="preserve">
-    <value>0</value>
-  </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="splitContainer1.TabIndex" type="System.Int32, mscorlib">
-    <value>5</value>
-  </data>
-  <data name="&gt;&gt;lvProxies.Parent" xml:space="preserve">
-    <value>splitContainer1.Panel1</value>
-  </data>
-  <data name="&gt;&gt;splitContainer1.ZOrder" xml:space="preserve">
-    <value>1</value>
-  </data>
-  <data name="lvDetail.TabIndex" type="System.Int32, mscorlib">
-    <value>3</value>
   </data>
   <data name="lvProxies.Items" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
@@ -173,41 +112,69 @@
         Y3NVbml0AQAAAAd2YWx1ZV9fAAgDAAAAAwAAAAs=
 </value>
   </data>
-  <data name="lvDetail.Size" type="System.Drawing.Size, System.Drawing">
-    <value>427, 502</value>
+  <data name="lvProxies.Location" type="System.Drawing.Point, System.Drawing">
+    <value>0, 0</value>
   </data>
-  <data name="splitContainer1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>830, 502</value>
+  <data name="lvProxies.Size" type="System.Drawing.Size, System.Drawing">
+    <value>399, 502</value>
   </data>
-  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>7, 17</value>
+  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="lvProxies.TabIndex" type="System.Int32, mscorlib">
+    <value>2</value>
   </data>
-  <data name="tsbProxiesReload.Size" type="System.Drawing.Size, System.Drawing">
-    <value>181, 22</value>
+  <data name="&gt;&gt;lvProxies.Name" xml:space="preserve">
+    <value>lvProxies</value>
   </data>
-  <data name="lvDetail.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
-    <value>Fill</value>
+  <data name="&gt;&gt;lvProxies.Type" xml:space="preserve">
+    <value>clashN.Base.ListViewFlickerFree, clashN, Culture=neutral, PublicKeyToken=null</value>
   </data>
-  <data name="&gt;&gt;tsbProxiesSpeedtest.Name" xml:space="preserve">
-    <value>tsbProxiesSpeedtest</value>
+  <data name="&gt;&gt;lvProxies.Parent" xml:space="preserve">
+    <value>splitContainer1.Panel1</value>
+  </data>
+  <data name="&gt;&gt;lvProxies.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
+  <data name="&gt;&gt;splitContainer1.Panel1.Name" xml:space="preserve">
+    <value>splitContainer1.Panel1</value>
   </data>
   <data name="&gt;&gt;splitContainer1.Panel1.Type" xml:space="preserve">
     <value>System.Windows.Forms.SplitterPanel, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="lvDetail.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 0</value>
-  </data>
-  <data name="splitContainer1.SplitterDistance" type="System.Int32, mscorlib">
-    <value>399</value>
-  </data>
-  <data name="lvProxies.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 0</value>
-  </data>
-  <data name="lvProxies.TabIndex" type="System.Int32, mscorlib">
-    <value>2</value>
-  </data>
-  <data name="&gt;&gt;splitContainer1.Panel2.Parent" xml:space="preserve">
+  <data name="&gt;&gt;splitContainer1.Panel1.Parent" xml:space="preserve">
     <value>splitContainer1</value>
+  </data>
+  <data name="&gt;&gt;splitContainer1.Panel1.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
+  <metadata name="cmsDetails.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>189, 17</value>
+  </metadata>
+  <data name="cmsDetails.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="tsbProxiesSpeedtestPart.Size" type="System.Drawing.Size, System.Drawing">
+    <value>223, 22</value>
+  </data>
+  <data name="tsbProxiesSpeedtestPart.Text" xml:space="preserve">
+    <value>Part Node Latency Test</value>
+  </data>
+  <data name="tsbProxiesSelectActivity.Size" type="System.Drawing.Size, System.Drawing">
+    <value>223, 22</value>
+  </data>
+  <data name="tsbProxiesSelectActivity.Text" xml:space="preserve">
+    <value>Select active node (Enter)</value>
+  </data>
+  <data name="cmsDetails.Size" type="System.Drawing.Size, System.Drawing">
+    <value>224, 70</value>
+  </data>
+  <data name="&gt;&gt;cmsDetails.Name" xml:space="preserve">
+    <value>cmsDetails</value>
+  </data>
+  <data name="&gt;&gt;cmsDetails.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ContextMenuStrip, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="lvDetail.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
+    <value>Fill</value>
   </data>
   <data name="lvDetail.Items" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
@@ -226,40 +193,100 @@
         Y3NVbml0AQAAAAd2YWx1ZV9fAAgDAAAAAwAAAAs=
 </value>
   </data>
-  <data name="&gt;&gt;tsbProxiesSpeedtest.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="lvDetail.Location" type="System.Drawing.Point, System.Drawing">
+    <value>0, 0</value>
   </data>
-  <data name="&gt;&gt;lvProxies.Type" xml:space="preserve">
+  <data name="lvDetail.Size" type="System.Drawing.Size, System.Drawing">
+    <value>427, 502</value>
+  </data>
+  <data name="lvDetail.TabIndex" type="System.Int32, mscorlib">
+    <value>3</value>
+  </data>
+  <data name="&gt;&gt;lvDetail.Name" xml:space="preserve">
+    <value>lvDetail</value>
+  </data>
+  <data name="&gt;&gt;lvDetail.Type" xml:space="preserve">
     <value>clashN.Base.ListViewFlickerFree, clashN, Culture=neutral, PublicKeyToken=null</value>
   </data>
-  <data name="cmsProxies.Size" type="System.Drawing.Size, System.Drawing">
-    <value>182, 70</value>
+  <data name="&gt;&gt;lvDetail.Parent" xml:space="preserve">
+    <value>splitContainer1.Panel2</value>
+  </data>
+  <data name="&gt;&gt;lvDetail.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
+  <data name="&gt;&gt;splitContainer1.Panel2.Name" xml:space="preserve">
+    <value>splitContainer1.Panel2</value>
+  </data>
+  <data name="&gt;&gt;splitContainer1.Panel2.Type" xml:space="preserve">
+    <value>System.Windows.Forms.SplitterPanel, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;splitContainer1.Panel2.Parent" xml:space="preserve">
+    <value>splitContainer1</value>
   </data>
   <data name="&gt;&gt;splitContainer1.Panel2.ZOrder" xml:space="preserve">
     <value>1</value>
   </data>
-  <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>System.Windows.Forms.UserControl, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="splitContainer1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>830, 502</value>
   </data>
-  <data name="&gt;&gt;lvProxies.ZOrder" xml:space="preserve">
-    <value>0</value>
+  <data name="splitContainer1.SplitterDistance" type="System.Int32, mscorlib">
+    <value>399</value>
   </data>
-  <data name="tsbProxiesSelectActivity.Size" type="System.Drawing.Size, System.Drawing">
-    <value>181, 22</value>
+  <data name="splitContainer1.TabIndex" type="System.Int32, mscorlib">
+    <value>5</value>
   </data>
-  <data name="tsbProxiesSelectActivity.Text" xml:space="preserve">
-    <value>Select active node</value>
+  <data name="&gt;&gt;splitContainer1.Name" xml:space="preserve">
+    <value>splitContainer1</value>
   </data>
-  <data name="&gt;&gt;splitContainer1.Panel1.Name" xml:space="preserve">
-    <value>splitContainer1.Panel1</value>
+  <data name="&gt;&gt;splitContainer1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.SplitContainer, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <metadata name="cmsProxies.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>18, 16</value>
-  </metadata>
+  <data name="&gt;&gt;splitContainer1.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;splitContainer1.ZOrder" xml:space="preserve">
+    <value>2</value>
+  </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>90</value>
   </metadata>
+  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
+    <value>7, 17</value>
+  </data>
+  <data name="$this.Size" type="System.Drawing.Size, System.Drawing">
+    <value>830, 502</value>
+  </data>
+  <data name="&gt;&gt;tsbProxiesReload.Name" xml:space="preserve">
+    <value>tsbProxiesReload</value>
+  </data>
+  <data name="&gt;&gt;tsbProxiesReload.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;tsbProxiesSpeedtest.Name" xml:space="preserve">
+    <value>tsbProxiesSpeedtest</value>
+  </data>
+  <data name="&gt;&gt;tsbProxiesSpeedtest.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;tsbProxiesSelectActivity.Name" xml:space="preserve">
+    <value>tsbProxiesSelectActivity</value>
+  </data>
+  <data name="&gt;&gt;tsbProxiesSelectActivity.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;tsbProxiesSpeedtestPart.Name" xml:space="preserve">
+    <value>tsbProxiesSpeedtestPart</value>
+  </data>
+  <data name="&gt;&gt;tsbProxiesSpeedtestPart.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;$this.Name" xml:space="preserve">
+    <value>ProxiesControl</value>
+  </data>
+  <data name="&gt;&gt;$this.Type" xml:space="preserve">
+    <value>System.Windows.Forms.UserControl, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
