add proxies are sorted by default

--- a/clashN/clashN/Resx/ResUI.resx
+++ b/clashN/clashN/Resx/ResUI.resx
@@ -637,4 +637,7 @@
   <data name="TbSetDefaultProfile" xml:space="preserve">
     <value>Set as active</value>
   </data>
+  <data name="TbSortingDefault" xml:space="preserve">
+    <value>Default</value>
+  </data>
 </root>
