--- a/clashN/clashN/Resx/ResUI.resx
+++ b/clashN/clashN/Resx/ResUI.resx
@@ -142,7 +142,7 @@
     <value>Whether to download? {0}</value>
   </data>
   <data name="EnableTunModeFailed" xml:space="preserve">
-    <value>Failed to enable tun mode, please run as administrator</value>
+    <value>Failed to enable Tun mode, please run as administrator</value>
   </data>
   <data name="FailedConversionConfiguration" xml:space="preserve">
     <value>Failed to convert configuration file</value>
@@ -443,7 +443,7 @@
     <value>Tun</value>
   </data>
   <data name="TbEnableTunAs" xml:space="preserve">
-    <value>Enable tun mode (Run As Admin)</value>
+    <value>Enable Tun mode</value>
   </data>
   <data name="TbEnableUpdate" xml:space="preserve">
     <value>Update</value>
@@ -602,7 +602,7 @@
     <value>The ping of current service: {0}</value>
   </data>
   <data name="TunModeCoreTip" xml:space="preserve">
-    <value>To enable tun mode, please use Clash.Meta Core first; or use Clash Premium Core</value>
+    <value>To enable Tun mode, please use Clash.Meta Core first; or use Clash Premium Core</value>
   </data>
   <data name="TbSave" xml:space="preserve">
     <value>Save</value>
