--- a/clashN/clashN/Resx/ResUI.fa-IR.resx
+++ b/clashN/clashN/Resx/ResUI.fa-IR.resx
@@ -464,7 +464,7 @@
     <value>چک کردن</value>
   </data>
   <data name="TbHelpProject" xml:space="preserve">
-    <value>پروژه clashN</value>
+    <value>پروژه ClashN</value>
   </data>
   <data name="TbHelpProjectGo" xml:space="preserve">
     <value>Go to</value>
