--- a/clashN/clashN/Resx/ResUI.resx
+++ b/clashN/clashN/Resx/ResUI.resx
@@ -464,7 +464,7 @@
     <value>Check</value>
   </data>
   <data name="TbHelpProject" xml:space="preserve">
-    <value>ClashN Project</value>
+    <value>Frok ClashN Project</value>
   </data>
   <data name="TbHelpProjectGo" xml:space="preserve">
     <value>Go to</value>
