--- a/clashN/clashN/Resx/ResUI.zh-Hans.resx
+++ b/clashN/clashN/Resx/ResUI.zh-Hans.resx
@@ -464,7 +464,7 @@
     <value>检查更新</value>
   </data>
   <data name="TbHelpProject" xml:space="preserve">
-    <value>ClashN 项目</value>
+    <value>Frok ClashN 项目</value>
   </data>
   <data name="TbHelpProjectGo" xml:space="preserve">
     <value>打开</value>
